--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "myways_test_by_chandan",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "babel-node index.js",
     "server": "nodemon --exec babel-node index",
     "client": "npm start --prefix views",
     "dev": "concurrently \"npm run server\" \"npm run client\""
