--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "myways_test_by_chandan",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon --exec babel-node index.js",
-    "build": "cd views && npm run build",
-    "install-client": "cd views && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "babel-node index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "babel-node index",
+    "server": "nodemon --exec babel-node index",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "chandan kumar",
   "license": "ISC",
